Humble beginnings, Flask & rendering works
- Added module to deal with configuration files

- Added git ignore

- Added a dedicated module for handling the data layer

- basic menu is done

--- a/src/main/python/templates/search.html
+++ b/src/main/python/templates/search.html
@@ -8,7 +8,7 @@
           class="form-horizontal"
           >
       <div class="form-group">
-        <label for="orderId" class="control-label col-xs-2">Kundenummer</label>
+        <label for="order_id" class="control-label col-xs-2">Kundenummer</label>
         <div class="col-xs-10">
           <input class="form-control"
                  id="customer_id"
@@ -17,7 +17,8 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="orderId" class="control-label col-xs-2">Gammelt nummer</label>
+        <label for="old_order_id"
+               class="control-label col-xs-2">Gammelt nummer</label>
         <div class="col-xs-10">
           <input class="form-control"
                  id="old_customer_id"
@@ -31,12 +32,12 @@
           <input class="form-control"
                  id="name"
                  name="name"
-                 placeholder="For- og/eller etternavn"/>
+                 placeholder="For-, mellom- og/eller etternavn"/>
         </div>
       </div>
       <div class="form-group">
         <div class="col-xs-offset-2 col-xs-10">
-          <button type="submit" class="btn btn-primary">Søk</button>
+          <button type="submit" class="btn btn-default">Søk</button>
         </div>
       </div>
     </form>
