--- a/src/main/python/templates/menu.html
+++ b/src/main/python/templates/menu.html
@@ -1,4 +1,4 @@
-    <div class="container navbar-inverse">
+    <div class="navbar-inverse navbar-fixed-top">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">
           Atelier
@@ -7,8 +7,10 @@
       <div class="navbar-collapse collapse">
         <ul id="menu" class="nav navbar-nav">
           <li><a href="/search">Søk</a></li>
-          <li><a href="/create-order">Ny ordre</a></li>
+          <li><a href="/customer">Ny kunde</a></li>
+          <li><a href="/create-product">Nytt produkt</a></li>
           <li><a href="/product-list">Se alle produkter</a></li>
+          <li><a href="/purchase-overview">Oversikt varekjøp</a></li>
           <li><a href="/about">Om</a></li>
         </ul>
       </div>
