--- a/src/main/python/templates/menu.html
+++ b/src/main/python/templates/menu.html
@@ -1,6 +1,6 @@
     <div class="navbar-inverse navbar-fixed-top">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
           Atelier
         </a>
       </div>
