--- a/src/main/python/templates/customer.html
+++ b/src/main/python/templates/customer.html
@@ -10,7 +10,12 @@
         <div class="form-group">
           <label class="control-label col-xs-2" for="id">Kundenummer</label>
           <div class="col-xs-10">
-            {{ customer['id'] }}
+            <input class="form-control"
+                   id="id"
+                   name="id"
+                   value="{{ customer['id'] }}"
+                   placeholder="kundenummer"
+                   readonly/>
           </div>
           </div><div class="form-group">
         </div>
@@ -40,7 +45,7 @@
             Registrert dato
           </label>
           <div class="col-xs-10">
-            {{ customer["creation_date"] }}
+            {{ customer["creation_date"] | sn }}
           </div>
         </div>
         <div class="form-group">
@@ -50,7 +55,7 @@
                    id="email_address"
                    name="email_address"
                    type="email"
-                   value="{{ customer['email_address'] }}"
+                   value="{{ customer['email_address'] | sn }}"
                    placeholder="email_address"/>
           </div>
         </div>
@@ -60,7 +65,7 @@
             <input class="form-control"
                    id="address"
                    name="address"
-                   value="{{ customer['address'] }}"
+                   value="{{ customer['address'] | sn }}"
                    placeholder="address"/>
           </div>
         </div>
@@ -128,7 +133,7 @@
             <input class="form-control"
                    id="birth_date"
                    name="birth_date"
-                   value="{{ customer['birth_date'] }}"
+                   value="{{ customer['birth_date'] | sn }}"
                    type="date"
                    placeholder="birth_date"/>
 
