Can now view & update a product
- Implemented product list

- Can now open a product from the product list and update its fields

- Implemented search for first and/or last name

- Added UTF-8 decoding to customer and customer list

--- a/src/main/python/templates/customer-list.html
+++ b/src/main/python/templates/customer-list.html
@@ -13,8 +13,8 @@
       {% for customer in customers %}
       <tr>
         <td>{{ customer["id"] }}</td>
-        <td>{{ customer["first_name"] }}</td>
-        <td>{{ customer["last_name"] }}</td>
+        <td>{{ customer["first_name"].decode('utf-8') }}</td>
+        <td>{{ customer["last_name"].decode('utf-8') }}</td>
         <td>{{ customer["creation_date"] }}</td>
       </tr>
       {% endfor %}
