--- a/src/main/python/templates/product-list.html
+++ b/src/main/python/templates/product-list.html
@@ -3,23 +3,23 @@
     <h1>Produkter</h1>
 {% endblock %}
 {% block content %}
-    <table>
+    <table class="table">
       <tr>
-        <th>id</th>
-        <th>name</th>
-        <th>creation_date</th>
-        <th>price</th>
-        <th>production_time</th>
-        <th>product_type_id</th>
+        <th>#</th>
+        <th>Navn</th>
+        <th>Opprettet</th>
+        <th>Pris</th>
+        <th>Tid</th>
+        <th>Produkt type</th>
       </tr>
       {% for product in products %}
       <tr>
         <td>{{ product["id"] }}</td>
-        <td>{{ product["name"] }}</td>
-        <td>{{ product["creation_date"] }}</td>
+        <td><a href="/product/{{ product['id'] }}">{{ product["name"] }}</a></td>
+        <td>{{ product["creation_date"] | sn }}</td>
         <td>{{ product["price"] }}</td>
-        <td>{{ product["production_time"] }}</td>
-        <td>{{ product["product_type_id"] }}</td>
+        <td>{{ product["production_time"] }} dager</td>
+        <td>{{ product["pt.name"].decode("utf-8") }}</td>
       </tr>
       {% endfor %}
     </table>
