Started on the order page
- added db insert method which returns the newly id of the newly
  inserted row. Uses the lastrowid attribute of the MySQL cursor
  object. Apparently, this is the recommended way of doing it.

- fair bit of work on the customer/list

--- a/src/main/python/templates/customer-list.html
+++ b/src/main/python/templates/customer-list.html
@@ -12,9 +12,21 @@
       </tr>
       {% for customer in customers %}
       <tr>
-        <td>{{ customer["id"] }}</td>
-        <td>{{ customer["first_name"].decode('utf-8') }}</td>
-        <td>{{ customer["last_name"].decode('utf-8') }}</td>
+        <td>
+          <a href="/customer/{{ customer["id"] }}">
+            {{ customer["id"] }}
+          </a>
+        </td>
+        <td>
+          <a href="/customer/{{ customer["id"] }}">
+            {{ customer["first_name"].decode('utf-8') }}
+          </a>
+        </td>
+        <td>
+          <a href="/customer/{{ customer["id"] }}">
+            {{ customer["last_name"].decode('utf-8') }}
+          </a>
+        </td>
         <td>{{ customer["creation_date"] }}</td>
       </tr>
       {% endfor %}
