--- a/src/main/python/templates/customer.html
+++ b/src/main/python/templates/customer.html
@@ -151,7 +151,7 @@
         </div>
       </form>
       {% if customer["id"] %}
-      <form action="/customer/delete"
+      <form action="/customer/{{ customer["id"] }}/delete"
             method="post"
             class="form-horizontal">
         <div class="form-group">
@@ -162,5 +162,32 @@
           </div>
         </div>
       </form>
+      <form action="/order"
+            method="post"
+            style="display: inline"
+            class="form-horizontal">
+        <div class="form-group">
+          <input id="customer_id"
+                 name="customer_id"
+                 type="hidden" value="{{ customer['id'] }}"
+                 />
+        </div>
+        <div class="form-group">
+          <div class="col-xs-offset-2 col-xs-10">
+            <button type="submit" class="btn btn-success">
+              Opprett ny ordre
+            </button>
+          </div>
+        </div>
+      </form>
+
       {% endif %}
 {% endblock %}
+
+
+
+
+
+
+
+
