Viewing orders & adding order items
- the filter_suppress_none now handles strings vs other objects

- this fixes runtime errors if the value happens to be something else
  than a string, such as datetime.

- Can now add an order item

- Can display order items

- Added simple listing of customer orders

--- a/src/main/python/templates/customer.html
+++ b/src/main/python/templates/customer.html
@@ -180,7 +180,33 @@
           </div>
         </div>
       </form>
-
+      {% endif %}
+      {% if order_list | length > 1 %}
+        <h2>
+          Ordrer
+        </h2>
+        <table class="table table-hover">
+          <tr>
+            <th>
+              Ordre #
+            </th>
+            <th>
+              Opprettet
+            </th>
+          </tr>
+          {% for order in order_list %}
+          <tr>
+            <td>
+              <a href="/order/{{ order['id'] }}">
+                {{ order["id"] }}
+              </a>
+            </td>
+            <td>
+              {{ order["creation_date"] }}
+            </td>
+          </tr>
+          {% endfor %}
+        </table>
       {% endif %}
 {% endblock %}
 
