Added atelier CSS

--- a/src/main/python/templates/base.html
+++ b/src/main/python/templates/base.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet"
           type="text/css"
           href="/files/bootstrap/css/bootstrap-theme.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/files/atelier.css"/>
     {% block head_title %}
     <title>
       Atelier Fotosystem 2.0
