--- a/src/main/python/templates/order.html
+++ b/src/main/python/templates/order.html
@@ -1,15 +1,115 @@
 {% extends "base.html" %}
 {% block title %}
-      <h1>Ordre #{{ order["id"] }}</h1>
+      <h1>
+        Ordre #{{ order["id"] }},
+        {{ customer["last_name"] | sn }},
+        {{ customer["first_name" ] | sn }}
+      </h1>
+      <p>
+        Dato: {{ order["creation_date"] }}
+      </p>
 {% endblock %}
 {% block content %}
       <div class="well">
-        Kundenummer {{ customer["id"] }},
-        <a href="/customer/{{ customer["id"] }}">
-          {{ customer["first_name" ] | sn }}
-          {{ customer["last_name"] | sn }}
-        </a>
+        <div class="row">
+          <div class="col-md-3">Kundenummer: {{ customer["id"] }}</div>
+          <div class="col-md-3">Mobil: {{ customer["mobile_phone"] | sn }}</div>
+          <div class="col-md-3">Telefon: {{ customer["home_phone"] | sn }}</div>
+          <div class="col-md-3">Arbeid: {{ customer["work_phone"] | sn }}</div>
+        </div>
+        <div class="row">
+          <div class="col-md-3">
+            Navn:
+            <a href="/customer/{{ customer["id"] }}">
+              {{ customer["first_name" ] | sn }}
+              {{ customer["last_name"] | sn }}
+            </a>
+          </div>
+          <div class="col-md-3">
+            Adresse: {{ customer["address"] | sn }}, {{ customer["post_code"] | sn }}
+          </div>
+          <div class="col-md-3">Født: {{ customer["birth_date"] | sn }}</div>
+          <div class="col-md-3">
+            Epost:
+            <a href="mailto:{{customer["email_address"] | sn }}">
+              {{ customer["email_address"] | sn }}
+            </a>
+          </div>
+        </div>
       </div>
+
+      <form action="/order/{{ order['id'] }}"
+            method="post"
+            class="form-inline">
+        <div class="form-group">
+          <div class="row">
+            <div class="col-xs-3">
+              <label class="control-label" for="develivery_date">Leveringsdato:</label>
+              <input class="form-control"
+                       id="delivery_date"
+                       name="delivery_date"
+                       value="{{ order['delivery_date'] | sn }}"
+                       readonly/>
+            </div>
+            <div class="col-xs-3">
+              <label class="control-label" for="updated_date">Sist oppdatert:</label>
+              <input class="form-control"
+                       id="updated_date"
+                       name="updated_date"
+                       value="{{ order['updated_date'] | sn }}"
+                       readonly/>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-3">
+              <label class="control-label" for="total_amount">Totalt:</label>
+              <div class="input-group">
+                <span class="input-group-addon">kr</span>
+                <input class="form-control"
+                       id="total_amount"
+                       name="total_amount"
+                       value="{{ order['total_amount'] | sn }}"
+                       readonly/>
+                <span class="input-group-addon">,00</span>
+              </div>
+            </div>
+            <div class="col-xs-3">
+              <label class="control-label" for="paid_amount">Betalt:</label>
+              <div class="input-group">
+                <span class="input-group-addon">kr</span>
+                <input type="text"
+                       class="form-control"
+                       value="{{ order['paid_amount'] | sn }}"
+                       aria-label="Amount (to the nearest dollar)"/>
+                <span class="input-group-addon">,00</span>
+              </div>
+            </div>
+            <div class="col-xs-3">
+              <label class="control-label" for="rest_amount">Rest:</label>
+              <div class="input-group">
+                <span class="input-group-addon">kr</span>
+                <input class="form-control"
+                       id="rest_amount"
+                       name="rest_amount"
+                       value="{{ order['rest_amount'] | sn }}"
+                       readonly/>
+                <span class="input-group-addon">,00</span>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-3">
+              <button type="submit" class="form-control btn btn-primary">
+                Oppdater ordreinformasjon
+              </button>
+            </div>
+          </div>
+        </div>
+      </form>
+
+      <h2>
+        Varer
+      </h2>
       <form action="/order/{{ order['id'] }}/item-list"
             method="post" class="form-inline">
         <div class="form-group">
@@ -28,7 +128,6 @@
             class="form-control span2"
             type="number"
             placeholder="antall"
-            size="3"
             />
           <button type="submit" class="btn btn-primary">
             Legg til vare
@@ -36,15 +135,14 @@
         </div>
       </form>
       {% if order_item_list | length > 0 %}
-      <h2>
-        Varer
-      </h2>
-      <table class="table table-hover">
+      <table class="table table-hover" style="margin-top: 2em;">
         <tr>
           <th>Varekjøp #</th>
           <th>Vare</th>
           <th>Antall</th>
+          <th>Sum</th>
           <th>Opprettet</th>
+          <th></th>
         </tr>
         {% for order_item in order_item_list %}
         <tr>
@@ -53,8 +151,12 @@
               {{ order_item["id"] }}
             </a>
           </td>
-          <td>{{ order_item["product_name"] }}</td>
+          <td>
+            {{ order_item["product_name"] }},
+            kr {{ order_item["product_price"]}}
+          </td>
           <td>{{ order_item["number_of_items"] }}</td>
+          <td>kr {{ order_item["total_amount"] }}</td>
           <td>{{ order_item["creation_date"] }}</td>
           <td>
             <form action="/order-item/{{ order_item['id'] }}/delete" method="post">
@@ -67,6 +169,5 @@
         {% endfor %}
       </table>
       {% endif %}
-    </div>
 {% endblock %}
 
