Vastly improved order screen
- the order's total amount, paid amount and outstanding balance are now
  updated upon purchose of products.

- it's now possible to edit an order item

- improved layout on the order screen
- atelier_sql::made get_sql_and_values atelier type agnostic

- Prefixed all read methods with get_, it's easier with consistent naming

--- a/src/main/python/templates/customer.html
+++ b/src/main/python/templates/customer.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block title %}
       <h1>Kunde</h1>
+      {% if updated %}
+      oppdatert
+      {% endif %}
 {% endblock %}
 {% block content %}
       <form action="/customer"
@@ -70,7 +73,9 @@
           </div>
         </div>
         <div class="form-group">
-          <label class="control-label col-xs-2" for="post_code">Postnummer</label>
+          <label class="control-label col-xs-2" for="post_code">
+            Postnummer
+          </label>
           <div class="col-xs-10">
             <select class="form-control">
               {% for pp in post_place_list %}
