--- a/src/main/python/templates/order-item.html
+++ b/src/main/python/templates/order-item.html
@@ -1,13 +1,45 @@
 {% extends "base.html" %}
 {% block title %}
-      <h1>Varekj&oslash;p #{{ order_item["id"] }}</h1>
+      <h1>
+        Varekjøp nummer {{ order_item["id"] }},
+        ordre nummer #{{ order_item['order_id'] }}
+      </h1>
 {% endblock %}
 {% block content %}
       <div class="well">
         <a href="/order/{{ order_item["order_id"] }}">
-          Ordrenummer {{ order_item["order_id" ] | sn }}
+          Tilbake til ordre #{{ order_item["order_id" ] | sn }}
         </a>
       </div>
+      <form action="/order-item/{{ order_item['id'] }}"
+            method="post" class="form-inline">
+        <div class="form-group">
+          <label class="control-label" for="product_id">Produkt</label>
+          <select id="product_id" name="product_id" class="form-control">
+            {% for product in product_list %}
+              {% if order_item["product_id"] == product["id"] %}
+              <option value="{{ product['id'] }}" selected>
+              {% else %}
+              <option value="{{ product['id'] }}">
+              {% endif %}
+                {{ product['name'] }}
+              </option>
+            {% endfor %}
+          </select>
+          <label class="control-label" for="number_of_items">Antall</label>
+          <input
+            id="number_of_items"
+            name="number_of_items"
+            class="form-control span2"
+            type="number"
+            placeholder="antall"
+            value="{{ order_item['number_of_items'] }}"
+            />
+          <button type="submit" class="btn btn-primary">
+            Oppdater varekjøp
+          </button>
+        </div>
+      </form>
 {% endblock %}
 
 
