Implemented order overview page
- narrowing on order date from/to

- TODO is to include a list of products

- Removed already resolved TODO

--- a/src/main/python/templates/menu.html
+++ b/src/main/python/templates/menu.html
@@ -10,7 +10,7 @@
           <li><a href="/customer">Ny kunde</a></li>
           <li><a href="/create-product">Nytt produkt</a></li>
           <li><a href="/product-list">Se alle produkter</a></li>
-          <li><a href="/purchase-overview">Oversikt varekjøp</a></li>
+          <li><a href="/report/order-overview">Oversikt varekjøp</a></li>
           <li><a href="/about">Om</a></li>
         </ul>
       </div>
