Started on delete product feature
- improved layout of order overview

--- a/src/main/python/templates/reports/order-overview.html
+++ b/src/main/python/templates/reports/order-overview.html
@@ -6,7 +6,7 @@
 
       <form action="/reports/order-overview"
             method="get"
-            class="form-horizontal">
+            class="form-inline">
         <div class="form-group">
           <label class="control-label col-xs-2" for="from_date">
             Fra dato
