Order overview page now considers user selected product list
- fixed a couple of UTF8 decoding issues

--- a/src/main/python/templates/product-list.html
+++ b/src/main/python/templates/product-list.html
@@ -15,11 +15,12 @@
       {% for product in products %}
       <tr>
         <td>{{ product["id"] }}</td>
-        <td><a href="/product/{{ product['id'] }}">{{ product["name"] }}</a></td>
+        <td><a href="/product/{{ product['id'] }}">
+          {{ product["name"] | sn}}</a></td>
         <td>{{ product["creation_date"] | sn }}</td>
         <td>{{ product["price"] }}</td>
         <td>{{ product["production_time"] }} dager</td>
-        <td>{{ product["pt.name"].decode("utf-8") }}</td>
+        <td>{{ product["pt.name"] | sn }}</td>
       </tr>
       {% endfor %}
     </table>
