Added support for locale specific dates
- the locale used by Atelier is configurable in atelier-conf.json

--- a/src/main/python/templates/order-item.html
+++ b/src/main/python/templates/order-item.html
@@ -22,7 +22,7 @@
               {% else %}
               <option value="{{ product['id'] }}">
               {% endif %}
-                {{ product['name'] }}
+                {{ product['name'] | sn }}
               </option>
             {% endfor %}
           </select>
