--- a/src/main/python/templates/product.html
+++ b/src/main/python/templates/product.html
@@ -13,11 +13,24 @@
             <input class="form-control"
                    id="id"
                    name="id"
-                   value="{{ product['id'] }}"
                    placeholder="produktnummer"
+                   value="{{ product['id'] }}"
                    readonly/>
           </div>
-          </div><div class="form-group">
+        </div>
+        <div class="form-group">
+          <label class="control-label col-xs-2"
+                 for="creation_date">
+            Registrert
+          </label>
+          <div class="col-xs-10">
+            <input class="form-control"
+                   id="id"
+                   name="id"
+                   placeholder="produktnummer"
+                   value="{{ product["creation_date"] | sn }}"
+                   readonly/>
+          </div>
         </div>
         <div class="form-group">
           <label class="control-label col-xs-2" for="name">Navn</label>
@@ -25,17 +38,52 @@
             <input class="form-control"
                    id="name"
                    name="name"
-                   value="{{ product['name'] }}"
+                   value="{{ product['name'] | sn }}"
                    placeholder="name"/>
           </div>
         </div>
         <div class="form-group">
-          <label class="control-label col-xs-2"
-                 for="creation_date">
-            Registrert dato
+          <label class="control-label col-xs-2" for="price">Pris</label>
+          <div class="col-xs-10">
+            <input class="form-control"
+                   id="price"
+                   name="price"
+                   value="{{ product['price'] | sn }}"
+                   type="number"
+                   placeholder="pris"/>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-xs-2" for="production_time">
+            Produksjonstid
           </label>
           <div class="col-xs-10">
-            {{ product["creation_date"] | sn }}
+            <input class="form-control"
+                   id="production_time"
+                   name="production_time"
+                   value="{{ product['production_time'] | sn }}"
+                   type="number"
+                   min="0"
+                   placeholder="Hvor lang tid det tar å levere dette"
+                   title="Hvor lang tid det tar å levere dette"/>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-xs-2" for="product_type_id">
+            Produkttype
+          </label>
+          <div class="col-xs-10">
+            <select class="form-control">
+              {% for pt in product_type_list %}
+                {% if product["product_type_id"] == pt["id"] %}
+              <option value="{{ pt['id'] }}" selected>
+                {% else %}
+              <option value="{{ pt['id'] }}">
+                {% endif %}
+                {{ pt["name"] | sn }}
+              </option>
+              {% endfor %}
+            </select>
           </div>
         </div>
         <div class="form-group">
