--- a/src/main/python/templates/error/404.html
+++ b/src/main/python/templates/error/404.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}
         <h1>
-          Upsy daisy, that didn't go too well, did it?
+          Beklager, jeg fant ikke siden du ba om :-(
         </h1>
 {% endblock %}
 {% block content %}
