--- a/src/main/python/templates/menu.html
+++ b/src/main/python/templates/menu.html
@@ -8,7 +8,7 @@
         <ul id="menu" class="nav navbar-nav">
           <li><a href="/search">Søk</a></li>
           <li><a href="/customer">Ny kunde</a></li>
-          <li><a href="/create-product">Nytt produkt</a></li>
+          <li><a href="/product">Nytt produkt</a></li>
           <li><a href="/product-list">Se alle produkter</a></li>
           <li><a href="/reports/order-overview">Oversikt varekjøp</a></li>
           <li><a href="/about">Om</a></li>
