Simpler decoding of utf8

--- a/src/main/python/templates/order.html
+++ b/src/main/python/templates/order.html
@@ -108,7 +108,7 @@
           <select id="product_id" name="product_id" class="form-control">
             {% for product in product_list %}
               <option value="{{ product['id'] }}">
-                {{ product['name'].decode("utf-8") }}
+                {{ product['name'] | sn }}
               </option>
             {% endfor %}
           </select>
