--- a/src/main/python/templates/order.html
+++ b/src/main/python/templates/order.html
@@ -56,6 +56,9 @@
                 <span class="input-group-addon">,00</span>
               </div>
             </div>
+            <!-- TODO add comment field -->
+            <!-- TODO add allowed used in newspaper -->
+            <!-- TODO add allowed used in marketing -->
             <div class="col-md-3">
               <label class="control-label" for="paid_amount">Betalt:</label>
               <div class="input-group">
@@ -144,7 +147,7 @@
             </a>
           </td>
           <td>
-            {{ order_item["product_name"] }},
+            {{ order_item["product_name"] | sn }},
             kr {{ order_item["product_price"]}}
           </td>
           <td>{{ order_item["number_of_items"] }}</td>
