--- a/src/main/python/templates/reports/order-overview.html
+++ b/src/main/python/templates/reports/order-overview.html
@@ -59,6 +59,9 @@
           </div>
         </div>
       </form>
+      <h2>
+        Totalt i perioden: kr <strong>{{ total_amount[0]["total_amount"] | sn }}</strong>
+      </h2>
       <div class="row">
         <div class="col-md-8">
           <canvas id="myChart" width="800" height="400"></canvas>
