--- a/src/main/python/templates/order.html
+++ b/src/main/python/templates/order.html
@@ -45,14 +45,12 @@
         <div class="form-group">
           <div class="row">
             <div class="col-md-3">
-              <label class="control-label" for="total_amount">Totalt:</label>
+              <label class="control-label">Totalt:</label>
               <div class="input-group">
                 <span class="input-group-addon">kr</span>
                 <input class="form-control"
-                       id="total_amount"
-                       name="total_amount"
                        value="{{ order['total_amount'] | sn }}"
-                       />
+                       readonly/>
                 <span class="input-group-addon">,00</span>
               </div>
             </div>
@@ -83,10 +81,8 @@
               </div>
             </div>
             <div class="col-md-3">
-              <label class="control-label" for="develivery_date">Leveringsdato:</label>
+              <label class="control-label">Leveringsdato:</label>
               <input class="form-control"
-                       id="delivery_date"
-                       name="delivery_date"
                        value="{{ order['delivery_date'] | sn }}"
                        readonly/>
             </div>
