Added TODO for updating the delivery date

--- a/src/main/python/templates/order.html
+++ b/src/main/python/templates/order.html
@@ -81,6 +81,7 @@
               </div>
             </div>
             <div class="col-md-3">
+              <!-- TODO: updated delivery_date according to added orer items -->
               <label class="control-label">Leveringsdato:</label>
               <input class="form-control"
                        value="{{ order['delivery_date'] | sn }}"
