--- a/src/main/python/templates/order.html
+++ b/src/main/python/templates/order.html
@@ -41,59 +41,102 @@
 
       <form action="/order/{{ order['id'] }}"
             method="post"
-            class="form-inline">
+            class="form-horizontal">
         <div class="form-group">
-          <div class="row">
-            <div class="col-md-3">
-              <label class="control-label">Totalt:</label>
-              <div class="input-group">
-                <span class="input-group-addon">kr</span>
-                <input class="form-control"
-                       value="{{ order['total_amount'] | sn }}"
-                       readonly/>
-                <span class="input-group-addon">,00</span>
-              </div>
-            </div>
-            <!-- TODO add comment field -->
-            <!-- TODO add allowed used in newspaper -->
-            <!-- TODO add allowed used in marketing -->
-            <div class="col-md-3">
-              <label class="control-label" for="paid_amount">Betalt:</label>
-              <div class="input-group">
-                <span class="input-group-addon">kr</span>
-                <input type="text"
-                       class="form-control"
-                       id="paid_amount"
-                       name="paid_amount"
-                       value="{{ order['paid_amount'] | sn }}"
-                       aria-label="Amount (to the nearest dollar)"/>
-                <span class="input-group-addon">,00</span>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <label class="control-label" for="rest_amount">Rest:</label>
-              <div class="input-group">
-                <span class="input-group-addon">kr</span>
-                <input class="form-control"
-                       value="{{ order['total_amount'] - order['paid_amount'] }}"
-                       readonly/>
-                <span class="input-group-addon">,00</span>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <!-- TODO: updated delivery_date according to added orer items -->
-              <label class="control-label">Leveringsdato:</label>
+          <label class="col-sm-2 control-label">Totalt</label>
+          <div class="col-sm-10">
+            <div class="input-group">
+              <span class="input-group-addon">kr</span>
               <input class="form-control"
-                       value="{{ order['delivery_date'] | sn }}"
-                       readonly/>
+                     value="{{ order['total_amount'] | sn }}"
+                     readonly/>
+              <span class="input-group-addon">,00</span>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-3" style="margin-top: 1.5em;">
-              <button name="update_order" type="submit" class="form-control btn btn-primary">
-                Oppdater ordreinformasjon
-              </button>
+        </div>
+          <!-- TODO add payment type? -->
+        <div class="form-group">
+          <label class="col-sm-2 control-label" for="paid_amount">Betalt</label>
+          <div class="col-sm-10">
+            <div class="input-group">
+              <span class="input-group-addon">kr</span>
+              <input type="text"
+                     class="form-control"
+                     id="paid_amount"
+                     name="paid_amount"
+                     value="{{ order['paid_amount'] | sn }}"
+                     aria-label="Amount (to the nearest dollar)"/>
+              <span class="input-group-addon">,00</span>
             </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-sm-2 control-label" for="rest_amount">Rest</label>
+          <div class="col-sm-10">
+            <div class="input-group">
+              <span class="input-group-addon">kr</span>
+              <input class="form-control"
+                     value="{{ order['total_amount'] - order['paid_amount'] }}"
+                     readonly/>
+              <span class="input-group-addon">,00</span>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <!-- TODO: updated delivery_date according to added orer items -->
+          <label class="col-sm-2 control-label">Leveringsdato</label>
+          <div class="col-sm-10">
+            <input class="form-control"
+                   value="{{ order['delivery_date'] | sn }}"
+                   readonly/>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-sm-2 control-label">Kan brukes i avis</label>
+          <div class="col-sm-1">
+            <input id="newspaper_allowed"
+                   name="newspaper_allowed"
+                   type="checkbox"
+                   value="1"
+                   {% if order["newspaper_allowed"] %}
+                   checked
+                   {% endif %}
+                   />
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-sm-2 control-label">
+            Kan brukes i markedsføring
+          </label>
+          <div class="col-sm-1">
+            <input id="marketing_allowed"
+                   name="marketing_allowed"
+                   type="checkbox"
+                   value="1"
+                   {% if order["marketing_allowed"] %}
+                   checked
+                   {% endif %}
+                   />
+          </div>
+        </div>
+        <!-- TODO add status? -->
+        <div class="form-group">
+          <label class="col-sm-2 control-label">Kommentar</label>
+          <div class="col-sm-10">
+            <textarea id="comment"
+                      name="comment"
+                      class="form-control"
+                      rows="3"
+                      >{{ order['comment'] | sn }}</textarea>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-12">
+            <button name="update_order"
+                    type="submit"
+                    class="form-control btn btn-primary">
+              Oppdater ordreinformasjon
+            </button>
           </div>
         </div>
       </form>
